sonarqube and bump some versions